--- a/app/src/main/res/layout/options_dialog.xml
+++ b/app/src/main/res/layout/options_dialog.xml
@@ -9,15 +9,15 @@
 
     <TextView
         android:id="@+id/title"
+
         style="@style/sectionHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:textSize="@dimen/_20ssp"
         android:lines="1"
         android:maxLines="2"
-        android:text="Filters"
+        android:text="@string/filters"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/white"
         android:layout_marginBottom="@dimen/_9sdp"
@@ -46,7 +46,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:inputType="none"
-            android:hint="City"
+            android:hint="@string/city"
             android:background="@color/colorSecondary"
             android:textColor="@color/colorOnSecondary"
             android:textColorHint="@color/colorOnSecondary"
@@ -77,7 +77,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:inputType="none"
-            android:hint="State"
+            android:hint="@string/state"
             android:background="@color/colorSecondary"
             android:textColor="@color/colorOnSecondary"
             />
